# hestia

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Dockerfile.init  Rocket.toml  hestia.toml  rocket.toml
.github/workflows/: rust.yml
migrations/2022-01-13-231536_create_users/: down.sql  up.sql
migrations/2022-01-18-090356_create_recipes/: up.sql
migrations/2022-03-12-004717_add_recipe_tags/: down.sql  up.sql
migrations/2022-05-05-202908_embed_pictures/: down.sql  up.sql
src/: appconfig.rs  authorization.rs  handlebars.rs  lib.rs  main.rs
src/db/: models.rs  schema.rs
src/handlers/: auth.rs  default.rs  mod.rs  recipes.rs  users.rs
static/: 404.html  mediumish.css
templates/: base.html.hbs  footer.html.hbs  nav.html.hbs
templates/recipes/: add.html.hbs  detail.html.hbs  edit.html.hbs  list.html.hbs
tests/: cucumber.rs
tests/cucumber/: recipes.feature
