[package]
name = "hestia"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

diesel = { version = "2.0.0-rc.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
# This is a dependency of diesel but we have to depend to enable the bundled feature
libsqlite3-sys = { version = "0.23.2", features = ["bundled"] }
handlebars = { version = "4.2.2", features = ["dir_source"] }
log = "0.4.17"
rocket = { version = "0.5.0-rc.2", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
serde = "1.0.137"
serde_json = "1.0.81"
serde_with = "1.13.0"
tokio = { version = "1.18.2", features = ["macros", "rt-multi-thread", "time"] }
unicode-segmentation = "1.9.0"
uuid = { version = "1.0.0", features = ["v4"] }
once_cell = "1.10.0"
reqwest = { version = "0.11.10", features = ["json"] }

[dev-dependencies]
async-trait = "0.1.53"
cucumber = "0.13.0"
scraper = "0.13.0"
reqwest = { version = "0.11.10", features = ["multipart"] }
log = "0.4.17"
env_logger = "0.9.0"
